change path to data for this repo

--- a/geolocations_folium_map.ipynb
+++ b/geolocations_folium_map.ipynb
@@ -1704,7 +1704,7 @@
     "m = folium.Map(location=[-37.2094444, 144.2094444], zoom_start=5)\n",
     "\n",
     "# Read data from the CSV\n",
-    "data = pd.read_csv('../output/FtToHNL_geolocdata.csv', skipinitialspace=True)\n",
+    "data = pd.read_csv('output/FtToHNL_geolocdata.csv', skipinitialspace=True)\n",
     "\n",
     "# Add marker one by one on the map. Skip locations that we couldn't find geocode for\n",
     "for i in range(1,len(data)):\n",
